# Perception

./: .cproject  .gitignore  .project  .test.cpp.swp  CMakeLists.txt  LICENSE  Makefile  README.md  test.cpp
.externalToolBuilders/: PerceptionBuild.launch
cmake_modules/: FindOpenNI2.cmake  Findfreenect2.cmake
include/: .processing.hpp.swp  .udpServer.hpp.swp  kinect.hpp  log.hpp  perception.hpp  processing.hpp
install/: installessentials.sh
install/boost_source/: bjam
install/boost_source/bin.v2/: project-cache.jam
install/boost_source/bin.v2/libs/config/checks/gcc-6.2.0/debug/: cxx11_auto_declarations  cxx11_constexpr  cxx11_defaulted_functions  cxx11_final  cxx11_hdr_mutex  cxx11_hdr_tuple  cxx11_lambdas  cxx11_noexcept  cxx11_nullptr  cxx11_rvalue_references  cxx11_template_aliases  cxx11_thread_local  cxx11_variadic_templates
install/boost_source/bin.v2/standalone/ac/gcc-6.2.0/release/link-static/threading-multi/: z
logs/: latest.txt
src/: .perception.cpp.swp  .processing.cpp.swp  .tables.cpp.swn  .tables.cpp.swo  @!  gear.cpp  kinect.cpp  log.cpp  mjpgserver.cpp  perception.cpp  processing.cpp
